v:0.0.73 -changed search to search as you type -hopefully stopped the icons in the top bar from being cut off

--- a/public/styles.css
+++ b/public/styles.css
@@ -155,8 +155,15 @@ select {
 }
 
 .playbackButton {
-  height: 50px;
-  width: 50px;
+  /* background-color: aqua; */
+  height: 100%;
+  width: max-content;
+}
+
+.playbackButton > img {
+  /* background-color: red; */
+  height: 2rem;
+  width: 2rem;
 }
 
 .displayFlexRow {
